# ArdanRustService

./: .gitignore  clean_rust.sh
code/: Cargo.toml
code/axum_compression/: Cargo.toml
code/axum_header_layer_inject/: Cargo.toml
code/axum_header_layer_inject/src/: main.rs
code/axum_headers/: Cargo.toml
code/axum_merge/: Cargo.toml
code/axum_merge/src/: main.rs
code/axum_openapi/: Cargo.toml
code/axum_openapi/src/: main.rs
code/axum_service_builder/src/: main.rs
code/axum_spans_own/src/: main.rs
code/axum_tracing_minimal/: Cargo.toml
code/axum_tracing_minimal/src/: main.rs
code/axum_tracing_tower/src/: main.rs
code/config/config_clap/: Cargo.toml
code/config/config_http/: Cargo.toml
code/config/config_http/src/: main.rs
code/config/config_minimal/: Cargo.toml
code/config/config_minimal/src/: main.rs
code/config_clap/src/: main.rs
code/deploy_native/deploy_bookstore/src/: main.rs  service_config.rs
code/deploy_native/deploy_bookstore/src/auth/: auth_layers.rs  db.rs  web_service.rs
code/deploy_native/deploy_bookstore/src/bookstore/: db.rs  mod.rs
code/deploy_native/deploy_bookstore/src/bookstore/migrations/: 20240131200825_initial.sql
code/deploy_native/deploy_bookstore/static_html/: book.html
code/deploy_native/deploy_bookstore/static_html/admin/: admin.html  index.html
code/envfile/: Cargo.toml
code/envfile/src/: main.rs
code/grpc/hello_tonic/: Cargo.toml  build.rs
code/grpc/hello_tonic/proto/: hello.proto
code/grpc/hello_tonic/src/: client.rs  server.rs
code/grpc/tonic_auth/: Cargo.toml  build.rs
code/grpc/tonic_auth/proto/: auth.proto
code/grpc/tonic_auth/src/: client.rs  server.rs
code/grpc/tonic_stream/: Cargo.toml  build.rs
code/grpc/tonic_stream/proto/: streaming.proto
code/grpc/tonic_stream/src/: client.rs  server.rs
code/grpc/tonic_tracing/: Cargo.toml
code/grpc/tonic_tracing/src/: server.rs
code/otel_minimal/src/: main.rs
code/rest_service/axum_compression/src/: main.rs  war_and_peace.txt
code/rest_service/axum_error_handling/: Cargo.toml
code/rest_service/axum_error_handling/src/: main.rs
code/rest_service/axum_extract_headers/: Cargo.toml
code/rest_service/axum_extract_headers/src/: main.rs
code/rest_service/axum_extract_path/: Cargo.toml
code/rest_service/axum_extract_path/src/: main.rs
code/rest_service/axum_extract_query/: Cargo.toml
code/rest_service/axum_extract_query/src/: main.rs
code/rest_service/axum_header_layer/: Cargo.toml
code/rest_service/axum_header_layer/src/: main.rs
code/rest_service/axum_headers/src/: main.rs
code/rest_service/axum_service_builder/: Cargo.toml
code/rest_service/hyper_client/: Cargo.toml
code/rest_service/hyper_client/src/: main.rs
code/rest_service/simple_http_server/: Cargo.toml
code/rest_service/simple_http_server/src/: main.rs
code/rest_service/simple_nested/src/: main.rs
code/rest_service/simple_tower_server/src/: main.rs
code/rest_service/simple_tower_server_multi_state/: Cargo.toml
code/rest_service/simple_tower_server_multi_state/src/: main.rs
code/rest_service/simple_tower_server_mut/: Cargo.toml
code/rest_service/simple_tower_server_mut/src/: main.rs
code/rest_service/static_content/: Cargo.toml
code/rest_service/static_content/src/: main.rs
code/rest_service/static_content/web/: demo.html
code/rest_service/status_codes/: Cargo.toml
code/rest_service/status_codes/src/: main.rs
code/simple_nested/: Cargo.toml
code/simple_nested_state/: Cargo.toml
code/simple_nested_state/src/: main.rs
code/simple_tower_server/: Cargo.toml
code/trace_to_file/: Cargo.toml
code/tracing/axum_spans_own/: Cargo.toml
code/tracing/axum_spans_own/src/: main.rs
code/tracing/axum_tracing_tower/: Cargo.toml
code/tracing/otel_minimal/: Cargo.toml
code/tracing/trace_to_file/src/: main.rs
code/tracing/trace_to_json/: Cargo.toml
code/tracing/trace_to_json/src/: main.rs
code/wss/ws_client/: Cargo.toml
code/wss/ws_client/src/: main.rs
code/wss/ws_echo/: Cargo.toml
code/wss/ws_echo/src/: echo.html  main.rs
code/wss/ws_json/: Cargo.toml
code/wss/ws_json/src/: json.html  main.rs
manual/: book.toml
manual/src/: SUMMARY.md  axum_extractors.md  axum_extractors_headers.md  axum_extractors_more.md  axum_extractors_path.md  axum_extractors_query.md  axum_file_log.md  axum_hyper_tower_tokio.md  axum_log_json.md  axum_spans.md  axum_spans_own.md  axum_tracing.md  axum_tracing_minimal.md  axum_tracing_tower.md  calling_other_services.md  config_clap.md  config_crate.md  config_dot_env.md  config_http.md  config_recap1.md  config_top.md  design_company_arch.md  design_intro.md  design_svc_config.md  design_svc_db.md  design_svc_exposure.md  design_svc_intro.md  design_svc_layer  design_svc_layer.md  design_svc_layout.md  design_svc_modular_monolith.md  design_svc_module.md  design_svc_scaling_out.md  error_handling.md  error_handling_recap.md  grpc_auth.md  grpc_conc  grpc_conclude.md  grpc_hello.md  grpc_hello2.md  (+41 more)
no_workspace/deploy_bookstore/: .env  Cargo.toml  Dockerfile  README.Docker.md  compose.yaml
no_workspace/deploy_bookstore/src/: main.rs  service_config.rs
no_workspace/deploy_bookstore/src/auth/: configuration.rs  mod.rs
no_workspace/deploy_bookstore/src/auth/migrations/: 20240131174232_initial.sql
no_workspace/deploy_bookstore/src/bookstore/: configuration.rs  web_service.rs
no_workspace/deploy_bookstore/static_html/: index.html
service/: .env  Cargo.toml
service/service_framework/: Cargo.toml
service/service_framework/src/: lib.rs  service_config.rs
service/src/: main.rs
service/webservice/: Cargo.toml
service/webservice/migrations/: 20240103195622_initial.sql
service/webservice/src/: lib.rs  my_other_service.rs  my_service.rs
service/webservice/src/librarian/: db.rs  mod.rs  rest.rs
