[package]
name = "code"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace]
members = [
    # REST Service Section
    "rest_service/simple_http_server", # Used in simple_http_server.md
    "rest_service/axum_extract_path", # Used in axum_extractors_path.md
    "rest_service/axum_extract_query", # Used in axum_extractors_query.md
    "rest_service/axum_extract_headers", # Used in axum_extractors_headers.md
    "rest_service/simple_tower_server", # Used in simple_tower_layer.md
    "rest_service/simple_tower_server_mut", # Used in simple_tower_layer_mut.md
    "rest_service/simple_tower_server_multi_state", # Used in simple_tower_layer_multi_state.md
    "rest_service/simple_nested", # Used in simple_nested.md
    "rest_service/simple_nested_state", # Used in nesting_state.md
    "rest_service/hyper_client", # Used in calling_other_services.md
    "rest_service/status_codes",  # Used in status_codes.md
    "rest_service/axum_error_handling", # Used in error_handling.md
    "rest_service/static_content", # Used in static_content.md
    "rest_service/axum_headers", # Used in header_auth.md
    "rest_service/axum_header_layer",  # Used in header_auth2.md
    "rest_service/axum_header_layer_inject", # Used in header_auth3.md
    "rest_service/axum_compression", # Used in layer_router.md
    "rest_service/axum_service_builder", # Used in layer_router.md

    # Tracing Section
    "tracing/axum_tracing_minimal", # Used in axum_tracing_minimal.md
    "tracing/axum_tracing_tower", # Used in axum_tracing_tower.md
    "tracing/axum_spans_own", # Used in axum_spans_own.md and axum_spans.md
    "tracing/trace_to_file", # Used in axum_file_log.md
    "tracing/trace_to_json", # Used in axum_log_json.md
    "tracing/otel_minimal", # Used in otel_hello.md

    # OpenAPI Section
    "openapi/axum_openapi", # Used in openapi.md

    # Configuration
    "config/envfile", # Used in config_dot_env.md
    "config/config_minimal", # Used in config_crate.md
    "config/config_http", # Used in config_http.md
    "config/config_clap",  # Used in config_clap.md

    # gRPC
    "grpc/hello_tonic", # Used in grpc_hello.md
    "grpc/tonic_stream", # Used in grpc_stream.md
    "grpc/tonic_auth", # Used in grpc_auth.md
    "grpc/tonic_tracing", # Used in grpc_tracing.md

    # WebSockets
    "wss/ws_echo", # Used in ws_echo_server.md
    "wss/ws_client", # Used in ws_client.md
    "wss/ws_json",  # Used in ws_json.md

    # Deployment - see the `no_workspace` folder
]
