[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
webservice = { path = "webservice" }
service_framework = { path = "service_framework" }
anyhow = "1.0.79"
tracing-subscriber = "0.3.18"

[workspace]
members = [
    "webservice",
    "service_framework",
]
