[package]
name = "service_framework"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
axum = "0.7.3"
config = { version = "0.13.4", features = [] }
dotenv = "0.15.0"
reqwest = { version = "0.11.23", features = [] }
serde = { version = "1.0.194", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
