[package]
name = "webservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service_framework = { path = "../service_framework" }
async-trait = "0.1.77"
anyhow = "1.0.79"
axum = "0.7.3"
dotenv = "0.15.0"
serde = { version = "1.0.194", features = ["derive"] }
tracing = "0.1.40"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "sqlite" ] }
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"

[dev-dependencies]
http-body-util = "0.1.0"
serde_json = "1.0.110"
