[package]
name = "config_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
axum = "0.7.4"
config = "0.13.4"
dotenvy = "0.15.7"
reqwest = "0.11.23"
tokio = { version = "1.35.1", features = ["full"] }
