[package]
name = "tonic_auth"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "auth-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "auth-client"
path = "src/client.rs"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.10"