[package]
name = "tonic_stream"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "streaming-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "streaming-client"
path = "src/client.rs"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"

[build-dependencies]
tonic-build = "0.10"
