[package]
name = "axum_service_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4.13", features = ["limit"] }
tower-http = { version = "0.5.1", features = ["compression-full", "cors"] }
